Subida cambio nombre proyecto java

--- a/proyectoDuo/nbproject/project.properties
+++ b/proyectoDuo/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/proyectoDuo.jar
+dist.jar=${dist.dir}/HolaDAM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/proyectoDuo
+dist.jlink.output=${dist.jlink.dir}/HolaDAM
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=proyectoDuo
-main.class=proyectoduo.ProyectoDuo
+jlink.launcher.name=HolaDAM
+main.class=HolaDAM.HolaDAM
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
